--- a/requirements.txt
+++ b/requirements.txt
@@ -29,7 +29,7 @@ pipreqs==0.4.11
 psycopg2==2.9.3
 pycparser==2.21
 PyJWT==2.4.0
-pypiwin32==223
+# pypiwin32==223
 pyunpack==0.3
 pywin32==304
 requests==2.28.1
