--- a/requirements.txt
+++ b/requirements.txt
@@ -29,9 +29,9 @@ pipreqs==0.4.11
 psycopg2==2.9.3
 pycparser==2.21
 PyJWT==2.4.0
-pypiwin32==223
+pypiwin32==223;platform_system == "Windows"
 pyunpack==0.3
-pywin32==304
+pywin32==304;platform_system == "Windows"
 requests==2.28.1
 SQLAlchemy==1.4.39
 urllib3==1.26.11
